--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -3296,7 +3296,7 @@
    "metadata": {},
    "source": [
     "#### Bilinear interpolation\n",
-    "If we want to resize a n image with a ratio that is not an integer we cannot simply use the slicing algorithm. A choice is to use [bilinear interpolation](https://en.wikipedia.org/wiki/Bilinear_interpolation). The algorithm uses the four nearest cell centers. It can be implemented as two functions. The first function computes the indices for the cells of the resampled raster, and the second function computes the value from the values of the four nearest neighbors. "
+    "If we want to rescale an image with a scale factor that is not an integer we cannot simply use the slicing algorithm. A choice is to use [bilinear interpolation](https://en.wikipedia.org/wiki/Bilinear_interpolation). The algorithm uses the four nearest cell centers. It can be implemented as two functions. The first function computes the indices for the cells of the resampled raster, and the second function computes the value from the values of the four nearest neighbors. "
    ]
   },
   {
@@ -3358,7 +3358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8215e377",
+   "id": "9123d804",
    "metadata": {},
    "source": [
     "We open an example raster file"
@@ -3403,7 +3403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed27a47",
+   "id": "317eaa27",
    "metadata": {},
    "source": [
     "We compute the coordinates of the output raster file by passing the factor to be used for the transformation along the two directions west-east and north-south. With the new coordinates we can apply the nearest neighbor algorithm to compute the values of the output raster file."
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ac5d2a",
+   "id": "70f7f71e",
    "metadata": {},
    "source": [
     "We create the output file to store the result"
@@ -3504,7 +3504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442bad51",
+   "id": "a8227a63",
    "metadata": {},
    "source": [
     "Finally we plot the output file"
