--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -268,7 +268,12 @@
    ],
    "source": [
     "x_origin, x_pixel_resolution, row_rotation, y_origin, column_rotation, y_pixel_resolution = in_ds.GetGeoTransform()\n",
-    "print('x origin: {} m.\\ny origin: {} m.\\nrow rotation: {}\\ncolumn rotation: {}\\nx pixel resolution: {} m.\\ny pixel resolution: {} m.'.format(x_origin, y_origin, row_rotation, column_rotation, x_pixel_resolution, x_pixel_resolution))"
+    "print('x origin: {} m.\\ny origin: {} m.\\nrow rot.: {}\\ncolumn rot.: {}\\nx pixel res.: {} m.\\ny pixel res: {} m.'.format(x_origin, \n",
+    "                                                                                                                        y_origin, \n",
+    "                                                                                                                        row_rotation, \n",
+    "                                                                                                                        column_rotation, \n",
+    "                                                                                                                        x_pixel_resolution, \n",
+    "                                                                                                                        x_pixel_resolution))"
    ]
   },
   {
