raster subsetting with gdal

--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5062f890",
+   "id": "c6d75846",
    "metadata": {},
    "source": [
     "# Raster subsetting\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b1ea6e0",
+   "id": "ad654c14",
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,7 @@
      "output_type": "stream",
      "text": [
       "NumPy version: 1.23.1\n",
-      "GDAL version: 3.5.1\n",
-      "geopandas version: 0.11.1\n"
+      "GDAL version: 3.5.1\n"
      ]
     }
    ],
@@ -31,18 +30,16 @@
     "import math\n",
     "from osgeo import gdal, osr, ogr\n",
     "from PIL import Image, ImageDraw\n",
-    "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "%matplotlib inline\n",
     "print(\"NumPy version: %s\"%np.__version__)\n",
-    "print(\"GDAL version: %s\"%gdal.__version__)\n",
-    "print(\"geopandas version: %s\"%gpd.__version__)"
+    "print(\"GDAL version: %s\"%gdal.__version__)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4674c8f7",
+   "id": "c4290e2d",
    "metadata": {},
    "source": [
     "## Landsat 9 imagery\n",
@@ -51,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a1aba61f",
+   "execution_count": 2,
+   "id": "80f0362a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "27932c04",
+   "execution_count": 3,
+   "id": "d3dd351a",
    "metadata": {},
    "outputs": [
     {
@@ -78,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f232bc6790>"
+       "<matplotlib.image.AxesImage at 0x22051932670>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -106,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "877ae8ec",
+   "execution_count": 4,
+   "id": "02e50798",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540f56e2",
+   "id": "f44181cd",
    "metadata": {},
    "source": [
     "We need to know which coordinate reference system (CRS) is used in the image, the coordinates of the origin of the Landsat image, and which is the pixel size (resolution). We will use the same CRS also for the subset image. We can see that the CRS is the projected Universal Transverse Mercator (UTM) [EPSG:32633](https://epsg.io/32633)"
@@ -136,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "d3eae6c9",
+   "execution_count": 5,
+   "id": "2d2eb4aa",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +143,7 @@
        "'PROJCS[\"WGS 84 / UTM zone 33N\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",15],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"32633\"]]'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "b404137e",
+   "execution_count": 6,
+   "id": "2270c684",
    "metadata": {},
    "outputs": [
     {
@@ -182,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "9bb98f04",
+   "execution_count": 7,
+   "id": "1079a52a",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +189,7 @@
        "(264885.0, 30.0, 0.0, 4742715.0, 0.0, -30.0)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32da2ecf",
+   "id": "97809c9a",
    "metadata": {},
    "source": [
     "The image cover an area of 235 x 238 $Km^2$ but our area of interest is smaller "
@@ -211,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "df45fef8",
+   "execution_count": 8,
+   "id": "1177acdb",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790f7c20",
+   "id": "35618442",
    "metadata": {},
    "source": [
     "The subset image covers a rectangular polygon that is translated from the origin of the Landsat image. In order to create the subset image we need to compute the coordinates of its origin and define its lenght in the horizontal and vertical directions. The coordinates of the origin of the subset image are referred to the origin of the coordinate reference system of the Landsat image. For example, we want to translate the origin $(x_s, y_s)$ of the subset image 105 Km to the east and 165 Km to the south with respect to the origin $(x_o, y_o)$ of the Landsat image.\n",
@@ -243,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fda4862",
+   "id": "d038c058",
    "metadata": {},
    "source": [
     "We use the same unit (meter) of the CRS of the Landsat image."
@@ -251,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "19790f6e",
+   "execution_count": 10,
+   "id": "6897f50a",
    "metadata": {},
    "outputs": [
     {
@@ -269,14 +266,14 @@
     "y_t = -165000 # shift of the subset origin from the image origin in meters in the vertical direction\n",
     "delta_x = 20000 # length in meters of the subset in the horizontal direction\n",
     "delta_y = -20000 # length in meters of the subset in the vertical direction\n",
-    "x_s = x_origin + x_t # x coordinate of the subset origin \n",
-    "y_s = y_origin + y_t # y coordinate of the subset origin\n",
+    "x_s = x_origin + x_t # x coordinate of the subset origin with respect to the CRS\n",
+    "y_s = y_origin + y_t # y coordinate of the subset origin with respect to the CRS\n",
     "print('Coordinates of the origin of the subset image: x = {} m, y ={} m\\n'.format(x_s, y_s))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bad221ab",
+   "id": "b438522a",
    "metadata": {},
    "source": [
     "In order to extract the subset from the Landsat image we have to compute the indices (row and column) of the subset origin and the number of columns (x direction), and the number of rows (y direction) of the subset image."
@@ -284,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "27cdd9d2",
+   "execution_count": 11,
+   "id": "302effd1",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +291,7 @@
        "(3500, 5500)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "eda9ea98",
+   "execution_count": 12,
+   "id": "e6d6209a",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +314,7 @@
        "(667, 667)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f15c8a",
+   "id": "15b0ad47",
    "metadata": {},
    "source": [
     "Now we can copy the data from the Landsat image to the subset image"
@@ -338,17 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "8d2d5f32",
+   "execution_count": 13,
+   "id": "873d207d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f23e7590d0>"
+       "<matplotlib.image.AxesImage at 0x22068a844f0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b8797a5",
+   "id": "c4a0700d",
    "metadata": {},
    "source": [
     "We create a GeoTIFF file to store the subset image."
@@ -381,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "c5d02feb",
+   "execution_count": 14,
+   "id": "4669d744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +388,6 @@
     "gtiff_driver = gdal.GetDriverByName('GTiff')\n",
     "patch_ds = gtiff_driver.Create(patch_fn, sub_cols, sub_rows, num_bands, band2_ds.GetRasterBand(1).DataType)\n",
     "patch_ds.SetProjection(band2_ds.GetProjection())\n",
-    "patch_ds.SetGeoTransform([x_origin + x_t, x_pixel_resolution, 0.0, y_origin + y_t, 0.0, y_pixel_resolution])\n",
     "patch_ds.SetGeoTransform([x_s, x_pixel_resolution, 0.0, y_s, 0.0, y_pixel_resolution])\n",
     "patch_band = patch_ds.GetRasterBand(1)\n",
     "patch_band.WriteArray(patch_data)\n",
@@ -400,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "86b56470",
+   "execution_count": 15,
+   "id": "3f6befcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f23e7c0d30>"
+       "<matplotlib.image.AxesImage at 0x22068e79d30>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "3fce56a4",
+   "execution_count": 16,
+   "id": "aff1d864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "9a279027",
+   "execution_count": 17,
+   "id": "a6256cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd331189",
+   "id": "95994a10",
    "metadata": {},
    "source": [
     "We can define a function to implement the process"
@@ -462,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "cc1a5eb4",
+   "execution_count": 18,
+   "id": "bce8046c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,8 +496,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "ddd40869",
+   "execution_count": 19,
+   "id": "e77973de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "223812a7",
+   "id": "b522a155",
    "metadata": {},
    "outputs": [],
    "source": []
