--- a/random_experiments.ipynb
+++ b/random_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "900c950c",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "text": [
       "NumPy version: 1.23.1\n",
       "Pandas version: 1.4.3\n",
-      "geopandas version: 0.11.1\n"
+      "GeoPandas version: 0.11.1\n"
      ]
     }
    ],
@@ -39,12 +39,12 @@
     "warnings.filterwarnings('ignore')\n",
     "print(\"NumPy version: %s\"%np.__version__)\n",
     "print(\"Pandas version: %s\"%pd.__version__)\n",
-    "print(\"geopandas version: %s\"%gpd.__version__)"
+    "print(\"GeoPandas version: %s\"%gpd.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "add95d7a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e2ecb330",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "7f761ddc",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "56257081",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "<AxesSubplot:xlabel='Longitude', ylabel='Latitude'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "274f11b9",
    "metadata": {},
    "outputs": [],
@@ -166,8 +166,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "423e2db1",
+   "metadata": {},
+   "source": [
+    "NW = (9.18303 45.55168), SE = (9.09325 45.51483)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "395cf83c",
    "metadata": {},
    "outputs": [],
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "66ca0170",
    "metadata": {},
    "outputs": [],
@@ -191,18 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "832d2438",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_frame_polygon = Polygon(image_frame_point_list)\n",
-    "image_frame_polygon_df = gpd.GeoDataFrame(index=[0], crs='epsg:4326', geometry=[polygon_geom])"
+    "image_frame_polygon_df = gpd.GeoDataFrame(index=[0], crs='epsg:4326', geometry=[image_frame_polygon])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "44dad71b",
    "metadata": {},
    "outputs": [
@@ -234,7 +242,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_e79250d39aca9d8367431add48981b1d {\n",
+       "                #map_7fc04b0ae28a344dcac6a214c5471e5f {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -246,13 +254,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_e79250d39aca9d8367431add48981b1d&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_7fc04b0ae28a344dcac6a214c5471e5f&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_e79250d39aca9d8367431add48981b1d = L.map(\n",
-       "                &quot;map_e79250d39aca9d8367431add48981b1d&quot;,\n",
+       "            var map_7fc04b0ae28a344dcac6a214c5471e5f = L.map(\n",
+       "                &quot;map_7fc04b0ae28a344dcac6a214c5471e5f&quot;,\n",
        "                {\n",
        "                    center: [45.6, 9.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -266,74 +274,74 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_c3e85b3a9005e3237a72ae1217c2f76e = L.tileLayer(\n",
+       "            var tile_layer_6271e0615cb0357ad10419efbd5007a8 = L.tileLayer(\n",
        "                &quot;https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors \\u0026copy; \\u003ca href=\\&quot;http://cartodb.com/attributions\\&quot;\\u003eCartoDB\\u003c/a\\u003e, CartoDB \\u003ca href =\\&quot;http://cartodb.com/attributions\\&quot;\\u003eattributions\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_e79250d39aca9d8367431add48981b1d);\n",
+       "            ).addTo(map_7fc04b0ae28a344dcac6a214c5471e5f);\n",
        "        \n",
        "    \n",
        "\n",
-       "        function geo_json_558d65e0db208ff224e6562b149f75c0_onEachFeature(feature, layer) {\n",
+       "        function geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_558d65e0db208ff224e6562b149f75c0 = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_558d65e0db208ff224e6562b149f75c0_onEachFeature,\n",
+       "        var geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb_onEachFeature,\n",
        "            \n",
        "        });\n",
        "\n",
-       "        function geo_json_558d65e0db208ff224e6562b149f75c0_add (data) {\n",
-       "            geo_json_558d65e0db208ff224e6562b149f75c0\n",
+       "        function geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb_add (data) {\n",
+       "            geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb\n",
        "                .addData(data)\n",
-       "                .addTo(map_e79250d39aca9d8367431add48981b1d);\n",
+       "                .addTo(map_7fc04b0ae28a344dcac6a214c5471e5f);\n",
        "        }\n",
-       "            geo_json_558d65e0db208ff224e6562b149f75c0_add({&quot;bbox&quot;: [8.889338566832725, 45.51078412869796, 9.162331746044424, 45.6927790646609], &quot;features&quot;: [{&quot;bbox&quot;: [8.889338566832725, 45.51078412869796, 9.162331746044424, 45.6927790646609], &quot;geometry&quot;: {&quot;coordinates&quot;: [[[8.889338566832725, 45.69029224135627], [9.159585055717876, 45.6927790646609], [9.162331746044424, 45.51326154947335], [8.89296819517379, 45.51078412869796], [8.889338566832725, 45.69029224135627]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_f68c1680ec7bc3ec5d61d83e0fa7fedb_add({&quot;bbox&quot;: [8.889338566832725, 45.51078412869796, 9.162331746044424, 45.6927790646609], &quot;features&quot;: [{&quot;bbox&quot;: [8.889338566832725, 45.51078412869796, 9.162331746044424, 45.6927790646609], &quot;geometry&quot;: {&quot;coordinates&quot;: [[[8.889338566832725, 45.69029224135627], [9.159585055717876, 45.6927790646609], [9.162331746044424, 45.51326154947335], [8.89296819517379, 45.51078412869796], [8.889338566832725, 45.69029224135627]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "        function geo_json_2d5019a013f5ca3a68cb2547d91797fe_styler(feature) {\n",
+       "        function geo_json_8a2b402dd29855f2eb161c7f89404f12_styler(feature) {\n",
        "            switch(feature.id) {\n",
        "                default:\n",
        "                    return {&quot;fillColor&quot;: &quot;orange&quot;};\n",
        "            }\n",
        "        }\n",
        "\n",
-       "        function geo_json_2d5019a013f5ca3a68cb2547d91797fe_onEachFeature(feature, layer) {\n",
+       "        function geo_json_8a2b402dd29855f2eb161c7f89404f12_onEachFeature(feature, layer) {\n",
        "            layer.on({\n",
        "            });\n",
        "        };\n",
-       "        var geo_json_2d5019a013f5ca3a68cb2547d91797fe = L.geoJson(null, {\n",
-       "                onEachFeature: geo_json_2d5019a013f5ca3a68cb2547d91797fe_onEachFeature,\n",
+       "        var geo_json_8a2b402dd29855f2eb161c7f89404f12 = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_8a2b402dd29855f2eb161c7f89404f12_onEachFeature,\n",
        "            \n",
-       "                style: geo_json_2d5019a013f5ca3a68cb2547d91797fe_styler,\n",
+       "                style: geo_json_8a2b402dd29855f2eb161c7f89404f12_styler,\n",
        "        });\n",
        "\n",
-       "        function geo_json_2d5019a013f5ca3a68cb2547d91797fe_add (data) {\n",
-       "            geo_json_2d5019a013f5ca3a68cb2547d91797fe\n",
+       "        function geo_json_8a2b402dd29855f2eb161c7f89404f12_add (data) {\n",
+       "            geo_json_8a2b402dd29855f2eb161c7f89404f12\n",
        "                .addData(data)\n",
-       "                .addTo(map_e79250d39aca9d8367431add48981b1d);\n",
+       "                .addTo(map_7fc04b0ae28a344dcac6a214c5471e5f);\n",
        "        }\n",
-       "            geo_json_2d5019a013f5ca3a68cb2547d91797fe_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[9.18303, 45.55168], [9.18303, 45.51483], [9.09325, 45.51483], [9.09325, 45.55168], [9.18303, 45.55168]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "            geo_json_8a2b402dd29855f2eb161c7f89404f12_add({&quot;features&quot;: [{&quot;geometry&quot;: {&quot;coordinates&quot;: [[[9.18303, 45.55168], [9.18303, 45.51483], [9.09325, 45.51483], [9.09325, 45.55168], [9.18303, 45.55168]]], &quot;type&quot;: &quot;Polygon&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
        "\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_526081f40c589aded3abb101c98e6c39 = L.popup();\n",
+       "                var lat_lng_popup_5730cd2f0855b24aabde15e91782348c = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_526081f40c589aded3abb101c98e6c39\n",
+       "                    lat_lng_popup_5730cd2f0855b24aabde15e91782348c\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_e79250d39aca9d8367431add48981b1d);\n",
+       "                        .openOn(map_7fc04b0ae28a344dcac6a214c5471e5f);\n",
        "                    }\n",
-       "                map_e79250d39aca9d8367431add48981b1d.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_7fc04b0ae28a344dcac6a214c5471e5f.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1fb8434cac0>"
+       "<folium.folium.Map at 0x18b66ae82e0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
