--- a/vector_and_raster_data.ipynb
+++ b/vector_and_raster_data.ipynb
@@ -20,7 +20,9 @@
      "output_type": "stream",
      "text": [
       "NumPy version: 1.23.1\n",
-      "GDAL version: 3.5.1\n"
+      "GDAL version: 3.5.1\n",
+      "GeoPandas version: 0.11.1\n",
+      "Rasterio version: 1.3.2\n"
      ]
     }
    ],
@@ -29,12 +31,16 @@
     "import numpy as np\n",
     "import math\n",
     "from osgeo import gdal, osr, ogr\n",
+    "import geopandas as gpd\n",
+    "import rasterio\n",
     "from PIL import Image, ImageDraw\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "%matplotlib inline\n",
     "print(\"NumPy version: %s\"%np.__version__)\n",
-    "print(\"GDAL version: %s\"%gdal.__version__)"
+    "print(\"GDAL version: %s\"%gdal.__version__)\n",
+    "print(\"GeoPandas version: %s\"%gpd.__version__)\n",
+    "print(\"Rasterio version: %s\"%rasterio.__version__)"
    ]
   },
   {
@@ -42,7 +48,7 @@
    "id": "0d383aa8",
    "metadata": {},
    "source": [
-    "We use a subset image that was exctracted from a Landsat 9 image over Southern Italy. The subset image covers an area in the Italian province of Latina with two towns: Gaeta and Formia.  "
+    "We use a subset image that was exctracted from a [Landsat 9](https://www.usgs.gov/landsat-missions/landsat-9) image (Band 2, 0.450 - 0.51 µm) over Southern Italy. The subset image covers an area in the Italian province of Latina with two towns: Gaeta and Formia.  "
    ]
   },
   {
@@ -202,7 +208,7 @@
    "id": "961f5ce4",
    "metadata": {},
    "source": [
-    "We want to superimpose a bounding box over the image, with the origin translated 5 Km to east and 5 Km to the south with respect to the origin of the image, to limit our area of interest over Gaeta.  "
+    "We want to superimpose a bounding box over the image, with the origin translated 7 Km to east and 11 Km to the south with respect to the origin of the image, to limit our area of interest over Gaeta.  "
    ]
   },
   {
@@ -322,9 +328,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas\n",
-    "import rasterio\n",
-    "\n",
     "bbox_gdf = geopandas.read_file(json_fn)\n",
     "imagery = rasterio.open(patch_fn)"
    ]
