--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -364,7 +364,7 @@
    "id": "c4a0700d",
    "metadata": {},
    "source": [
-    "We create a GeoTIFF file to store the subset image."
+    "We create a GeoTIFF file to store the subset image. It is important to set the origin of the subset with reference to the CRS, not the with the origin of the Landsat 9 image."
    ]
   },
   {
@@ -466,8 +466,8 @@
     "    y_s = y_0 + y_t\n",
     "    x_res = gt[1]\n",
     "    y_res = gt[5]\n",
-    "    s_col = int(x_t / x_res)\n",
-    "    s_row = int(y_t / y_res)\n",
+    "    s_col = round(x_t / x_res)\n",
+    "    s_row = round(y_t / y_res)\n",
     "    sub_cols = round(delta_x / x_res)\n",
     "    sub_rows = round(delta_y / abs(y_res))\n",
     "    patch_data = np.empty((sub_cols, sub_rows), dtype=float)\n",
