--- a/pan_sharpening.ipynb
+++ b/pan_sharpening.ipynb
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5160bb15",
+   "id": "93ceecf2",
    "metadata": {},
    "outputs": [
     {
@@ -632,6 +632,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35363457",
+   "metadata": {},
+   "source": [
+    "## Pan-sharpening"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "7c658de5",
@@ -655,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "008962f2",
+   "id": "b144bdc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fb1c1c44",
+   "id": "134b56a5",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d6b66c8f",
+   "id": "f6c0a441",
    "metadata": {},
    "outputs": [
     {
@@ -754,8 +762,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3705ba37",
+   "execution_count": 32,
+   "id": "9e682238",
    "metadata": {},
    "outputs": [
     {
@@ -779,35 +787,14 @@
     "ax.set_title('Pan-sharpened Mean')    \n",
     "ax.axis('off')\n",
     "plt.show()\n",
-    "img = Image.fromarray(im_data)\n",
+    "img = Image.fromarray(im_data[200:550, 200:600, :])\n",
     "img.save(path + 'pansharpened.tif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "a4e1cb3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1333, 1333, 3)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "im_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "cef8071f",
+   "id": "198f72d2",
    "metadata": {},
    "outputs": [],
    "source": []
