--- a/raster_subsetting.ipynb
+++ b/raster_subsetting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "ad654c14",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "80f0362a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "d3dd351a",
    "metadata": {},
    "outputs": [
@@ -75,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11f853ad9a0>"
+       "<matplotlib.image.AxesImage at 0x11fde7a9af0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,10 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "02e50798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 7841\n",
+      "Columns: 7951\n"
+     ]
+    }
+   ],
    "source": [
     "band2_ds = gdal.Open(band2_fn)\n",
     "rows = band2_ds.RasterXSize\n",
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "2d2eb4aa",
    "metadata": {},
    "outputs": [
@@ -134,7 +143,7 @@
        "'PROJCS[\"WGS 84 / UTM zone 33N\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",15],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"32633\"]]'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "2270c684",
    "metadata": {},
    "outputs": [
@@ -170,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "1079a52a",
    "metadata": {},
    "outputs": [
@@ -180,7 +189,7 @@
        "(264885.0, 30.0, 0.0, 4742715.0, 0.0, -30.0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "1177acdb",
    "metadata": {},
    "outputs": [
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "6897f50a",
    "metadata": {},
    "outputs": [
@@ -272,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "302effd1",
    "metadata": {},
    "outputs": [
@@ -282,7 +291,7 @@
        "(3500, 5500)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "e6d6209a",
    "metadata": {},
    "outputs": [
@@ -305,7 +314,7 @@
        "(667, 667)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,17 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "873d207d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22068a844f0>"
+       "<matplotlib.image.AxesImage at 0x11fdf7a6e20>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "4669d744",
    "metadata": {},
    "outputs": [],
@@ -387,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "3f6befcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22068e79d30>"
+       "<matplotlib.image.AxesImage at 0x11f801241f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -421,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "aff1d864",
    "metadata": {},
    "outputs": [],
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "a6256cad",
    "metadata": {},
    "outputs": [],
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "bce8046c",
    "metadata": {},
    "outputs": [],
@@ -457,6 +466,10 @@
     "def subset_raster(path_input_image, x_t, y_t, delta_x, delta_y, path_subset):\n",
     "    '''\n",
     "    Returns a subset of a raster image in the GeoTiff format.\n",
+    "    path_input_image: path to the GeoTiff file with one band data\n",
+    "    x_t, y_t: coordinates, in meters, of the subset origin, with respect to the input image origin\n",
+    "    delta_x, delta_y: horizontal and vertical size of the subset, in meters\n",
+    "    path_subset: path to the subset \n",
     "    '''\n",
     "    band_ds = gdal.Open(path_input_image)\n",
     "    gt = band_ds.GetGeoTransform()\n",
@@ -487,12 +500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "e77973de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_raster(band2_fn, 105000, -165000, 20000, 20000, path + 'subset.tif')"
+    "subset_raster(band8_fn, 105000, -165000, 20000, 20000, path + 'LC09_L1TP_190031_B8_subset.tif')"
    ]
   }
  ],
